tests/error/move_across_for_loop_boundary.bz
// error: unable to move variable 'i', because it is outside a loop boundary
// note: variable was declared here
function test()
{
	let i = 0;
	for (;;)
	{
		move i;
	}
}
